# FIAP_PNAD-COVID-19

./: .gitignore  Makefile  README.md  data.csv  pyproject.toml
src/: create_consolidated_table.py
src/helpers/: helpers.py  queries.py
