[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Tadeu Tupinambá <tadeu.tupiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google = "^3.0.0"
google-cloud = "^0.34.0"
google-cloud-bigquery = "^3.19.0"
pandas = "^2.2.1"
pyspark = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
